@@ -6,7 +6,6 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 
 import io.openems.common.exceptions.OpenemsException;
 import io.openems.edge.bridge.modbus.api.element.AbstractModbusElement;
@@ -116,7 +115,7 @@ public class ModbusUtils {
 				.thenAccept(ignored -> result.complete(//
 						subResults.stream() //
 								.map(CompletableFuture::join) //
-								.collect(Collectors.toList())));
+								.toList()));
 
 		return result;
 	}
